# BoopInterpreter

./: CMakeLists.txt  README.md  grammar.md  todo.md
dumped_headers/: Expr.cpp  Expr.h  Stmt.cpp  Stmt.h
include/: ASTNodes.h  Boop.h  CMakeLists.txt  Class.h  ClassInstance.h  Environment.h  ErrorHandler.h  Evaluator.h  Expr.h  Function.h  Interpreter.h  InterpreterModule.h  Parser.h  Resolver.h  Scanner.h  Stmt.h  Token.h  TokenType.h  Types.h
requirements/: grammar.md  requirements.md  todo.md
src/: ASTNodes.cpp  Boop.cpp  ClassInstance.cpp  Environment.cpp  ErrorHandler.cpp  Evaluator.cpp  Expr.cpp  FileReader.cpp  Main.cpp  Parser.cpp  Scanner.cpp  Stmt.cpp  Token.cpp  TokenType.cpp  Types.cpp
